# literate-octo-spoon

./: .dockerignore  Dockerfile  README.md  compose.yml  pyproject.toml
config/: settings.py  urls.py
posts/: models.py  permissions.py  views.py
posts/migrations/: 0002_alter_comment_body_alter_post_body_alter_post_title.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
