[tool.poetry]
name = "literate-octo-spoon"
version = "0.1.0"
description = ""
authors = ["a.emelyanov <alexndr.emelyanov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1.2"
djangorestframework = "3.14.0"
djangorestframework-simplejwt = "5.2.2"
pillow = "9.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
